back: WIP game debug
